Prepare for production deployment
- Updated deploy.sh with comprehensive error handling and health checks
- Added complete Nginx configuration for proep.az with SSL
- Created production environment template for backend
- Updated README with detailed setup and deployment instructions
- Improved .gitignore with comprehensive exclusions
- Added admin authentication, menu management, and server monitoring features

--- a/new-proep-backend/.env.production
+++ b/new-proep-backend/.env.production
@@ -1,17 +1,25 @@
-# Database Configuration (Production)
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=proep
-DB_USER=pro
-DB_PASSWORD=Projson!
+# Backend Environment Variables
 
 # Server Configuration
 PORT=3001
 NODE_ENV=production
 
-# CORS Origins (Production)
-CORS_ORIGINS=https://proep.az,https://www.proep.az
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=pro
+DB_PASSWORD=Projson!
+DB_NAME=proep
 
-# Telegram Bot Configuration
-TELEGRAM_BOT_TOKEN=8486628690:AAErAISU1RrNSOnA5V6gWV7K1VxM3QOQx8I
-TELEGRAM_CHAT_ID=-5072517302
+# JWT Configuration
+JWT_SECRET=your-production-jwt-secret-change-this-to-random-string
+JWT_EXPIRES_IN=24h
+
+# Frontend URL
+FRONTEND_URL=https://proep.az
+
+# Optional: Email Configuration (if needed)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
