--- a/new-proep-backend/package.json
+++ b/new-proep-backend/package.json
@@ -17,11 +17,14 @@
     "author": "Proep.az",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
-        "pg": "^8.16.3"
+        "jsonwebtoken": "^9.0.3",
+        "pg": "^8.16.3",
+        "systeminformation": "^5.30.6"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
